<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Detalle">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="4dp"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/Theme.AppCompat.Light"
    />

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="220dp"
            app:srcCompat="@drawable/foto_01"
            android:id="@+id/ivFoto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" android:layout_marginTop="8dp"/>
    <TextView
            android:text="Francisco Montúfar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tvNombre"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/ivFoto" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="Globant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tvEmpresa"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvNombre" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
    <TextView
            android:text="@string/titulo_edad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tvEmpresa"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/textView4" android:layout_marginEnd="8dp"
            android:id="@+id/textView"/>
    <TextView
            android:text="@string/titulo_peso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView4"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tvEmpresa" app:layout_constraintEnd_toStartOf="@+id/Telefono"
            app:layout_constraintStart_toEndOf="@+id/textView"/>
    <TextView
            android:text="@string/titulo_telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/Telefono"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tvEmpresa" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/textView4"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="24 años"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tvEdad"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/tvPeso"/>
    <TextView
            android:text="73 Kg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tvPeso"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintEnd_toStartOf="@+id/tvTelefono" app:layout_constraintStart_toEndOf="@+id/tvEdad"/>
    <TextView
            android:text="1234567891"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tvTelefono"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/Telefono"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/tvPeso"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/titulo_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView9"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/tvPeso"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>
    <TextView
            android:text="@string/titulo_direccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView10"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvEmail" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>
    <TextView
            android:text="franciscomontufar@globant.com"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tvEmail"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView9" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="Bogota Dc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tvDireccion"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView10" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"/>
</android.support.constraint.ConstraintLayout>