<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Nuevo">
    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="4dp"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/Theme.AppCompat.Light"
    />

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="220dp"
            app:srcCompat="@drawable/foto_01"
            android:id="@+id/ivFoto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" android:layout_marginTop="8dp"/>
    <EditText
            android:hint="Nombre"
            android:layout_width="150dp"
            android:layout_height="wrap_content" android:id="@+id/tvNombre"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintTop_toBottomOf="@+id/ivFoto" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toStartOf="@+id/tvApellidos"
            android:inputType="text|textPersonName" android:singleLine="true"/>
    <EditText
            android:hint="Empresa"
            android:layout_width="100dp"
            android:layout_height="wrap_content" android:id="@+id/tvEmpresa"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintTop_toBottomOf="@+id/tvNombre" app:layout_constraintHorizontal_bias="0.501"
            android:inputType="text" android:singleLine="true"/>
    <TextView
            android:text="@string/titulo_edad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvEmpresa"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/textView4" android:layout_marginEnd="8dp"
            android:id="@+id/textView"/>
    <TextView
            android:text="@string/titulo_peso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/tvEmpresa" app:layout_constraintEnd_toStartOf="@+id/Telefono"
            app:layout_constraintStart_toEndOf="@+id/textView"/>
    <TextView
            android:text="@string/titulo_telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/Telefono"
            app:layout_constraintTop_toBottomOf="@+id/tvEmpresa" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/textView4"
            android:layout_marginStart="8dp"/>
    <EditText
            android:hint="Edad"
            android:layout_width="60dp"
            android:layout_height="wrap_content" android:id="@+id/tvEdad"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/tvPeso" android:inputType="number" android:singleLine="true"/>
    <EditText
            android:hint="Peso"
            android:layout_width="60dp"
            android:layout_height="wrap_content" android:id="@+id/tvPeso"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintEnd_toStartOf="@+id/tvTelefono" app:layout_constraintStart_toEndOf="@+id/tvEdad"
            android:inputType="numberDecimal" android:singleLine="true"/>
    <EditText
            android:hint="Telefono"
            android:layout_width="100dp"
            android:layout_height="wrap_content" android:id="@+id/tvTelefono"
            app:layout_constraintTop_toBottomOf="@+id/Telefono"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/tvPeso"
            android:layout_marginStart="8dp" android:inputType="textPhonetic|phone" android:singleLine="true"/>
    <TextView
            android:text="@string/titulo_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView9"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tvPeso"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>
    <TextView
            android:text="@string/titulo_direccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/tvEmail" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toStartOf="@+id/textView2"/>
    <TextView
            android:text="Cargo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tvEmail" app:layout_constraintStart_toEndOf="@+id/textView10"
    />
    <EditText
            android:hint="Correo electronico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tvEmail"
            app:layout_constraintTop_toBottomOf="@+id/textView9" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:inputType="textEmailAddress" android:singleLine="true"/>
    <EditText
            android:hint="Dirección"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tvDireccion"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toStartOf="@+id/tvCargo"
            android:inputType="textPostalAddress" android:singleLine="true"/>
    <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="Apellido"
            android:id="@+id/tvApellidos"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivFoto" app:layout_constraintStart_toEndOf="@+id/tvNombre"
            android:singleLine="true"/>
    <EditText
            android:hint="Cargo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tvCargo"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/tvDireccion"
            android:inputType="text" android:singleLine="true"/>

</android.support.constraint.ConstraintLayout>